<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.onuba.codegenerator</groupId>
	<artifactId>blackwolf</artifactId>
	<version>1.0.0</version>
	<packaging>jar</packaging>
	<name>BlackWolf :: Generator</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring.version>4.1.5.RELEASE</spring.version>
	</properties>

	<dependencies>

		<!-- JUNIT -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.9</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>4.1.5.RELEASE</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-runtime</artifactId>
			<version>4.0</version>
		</dependency>

		<!-- logback -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.0.0</version>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			<version>1.0.0</version>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-access</artifactId>
			<version>1.0.0</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.6.4</version>
		</dependency>

		<!-- SPRING -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
			<version>${spring.version}</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
				<configuration>
					<skipTests>false</skipTests>
					<!-- Al sobreescribir la configuracion se surefire, renemos que añadir 
						el argumento argLine creaod por JaCoCo para que se pueda mapear el agente 
						desde el dir de target al jar de maven. Para evitar problemas en el encoding 
						de lso ficheros de resultado de test -->
					<argLine>${argLine} -Duser.language=en -Duser.region=GB -Xms512m
						-Xmx512m -XX:PermSize=64m -XX:MaxPermSize=128m</argLine>

				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
			</plugin>

			

			<!--This plugin's configuration is used to store Eclipse m2e settings 
				only. It has no influence on the Maven build itself. -->
			<plugin>
				<groupId>org.eclipse.m2e</groupId>
				<artifactId>lifecycle-mapping</artifactId>
				<version>1.0.0</version>
				<configuration>
					<lifecycleMappingMetadata>
						<pluginExecutions>
							<pluginExecution>
								<pluginExecutionFilter>
									<groupId>
										org.apache.maven.plugins
									</groupId>
									<artifactId>
										maven-dependency-plugin
									</artifactId>
									<versionRange>
										[2.5.1,)
									</versionRange>
									<goals>
										<goal>
											copy-dependencies
										</goal>
									</goals>
								</pluginExecutionFilter>
								<pluginExecutionFilter>
									<groupId>
										org.antlr
									</groupId>
									<artifactId>
										antlr4-maven-plugin
									</artifactId>
									<versionRange>
										[4.0,)
									</versionRange>
									<goals>
										<goal>
											antlr4
										</goal>
									</goals>
								</pluginExecutionFilter>
								<action>
									<ignore />
								</action>
							</pluginExecution>
							<!-- Añadimos configuracion para el plugin de eclipse, para evitar 
								errores por no saber ubicar en el lifecycle los goals de jacoco -->
							<pluginExecution>
								<pluginExecutionFilter>
									<groupId>org.jacoco</groupId>
									<artifactId>jacoco-maven-plugin</artifactId>
									<versionRange>[0.5,)
									</versionRange>
									<goals>
										<goal>prepare-agent</goal>
									</goals>
								</pluginExecutionFilter>
								<action>
									<!-- m2e doesn't know what to do with jacoco, let's ignore it or 
										annoying error markers appear see http://wiki.eclipse.org/M2E_plugin_execution_not_covered -->
									<ignore></ignore>
								</action>
							</pluginExecution>
						</pluginExecutions>
					</lifecycleMappingMetadata>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.antlr</groupId>
				<artifactId>antlr4-maven-plugin</artifactId>
				<version>4.0</version>
				<executions>
					<execution>
						<goals>
							<goal>antlr4</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>